# src/routes/authRoutes.js
@@ -1,8 +1,9 @@
 const { Router } = require('express');
-const { verify } = require('../controllers/authController');
+const { requestOtpHandler, verifyOtpHandler } = require('../controllers/authController');
 
 const router = Router();
 
-router.post('/verify', verify);
+router.post('/otp/request', requestOtpHandler);
+router.post('/otp/verify', verifyOtpHandler);
 
 module.exports = router;
